--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -4,3 +4,5 @@
 
 - hosts: uat-webservers
 - import_playbook: ../static-assignments/uat-webservers.yml
+
+import_playbook: ../static-assignments/db-servers.yml
