--- a/inventory/uat.yml
+++ b/inventory/uat.yml
@@ -2,3 +2,9 @@
 [uat-webservers]
 172.31.28.208 ansible_ssh_user='ec2-user'
 172.31.24.16 ansible_ssh_user='ec2-user'
+
+[lb]
+172.31.81.222 ansible_ssh_user=<ec2-username> 
+
+[db-servers]
+172.31.91.204 ansible_ssh_user=<ec2-user>  
