--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,21 +1,31 @@
 pipeline {
     agent any
-
-  stages {
-    stage('Build') {
-      steps {
-        script {
-          sh 'echo "Building Stage"'
+    
+    stages {
+        stage('Build') {
+            steps {
+                echo 'Building...'
+            }
         }
-      }
-    }
-
-    stage('Test') {
-      steps {
-        script {
-          sh 'echo "Testing Stage"'
+        stage('Test') {
+            steps {
+                echo 'Testing...'
+            }
         }
-      }
-    }
+        stage('Package') {
+            steps {
+                echo 'Packaging...'
+            }
+        }
+        stage('Deploy') {
+            steps {
+                echo 'Deploying...'
+            }
+        }
+        stage('Clean up') {
+            steps {
+                echo 'Cleaning up...'
+            }
+        }
     }
 }
