--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -6,3 +6,7 @@
 - import_playbook: ../static-assignments/uat-webservers.yml
 
 import_playbook: ../static-assignments/db-servers.yml
+
+
+name: todo
+import_playbook: ../static-assignments/todo.yml
