--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,12 +1,14 @@
 ---
-- hosts: all
-- import_playbook: ../static-assignments/common.yml
-
-- hosts: uat-webservers
-- import_playbook: ../static-assignments/uat-webservers.yml
-
-import_playbook: ../static-assignments/db-servers.yml
-
-
-name: todo
-import_playbook: ../static-assignments/todo.yml
+# Play for including dynamic variables
+- name: Include dynamic variables
+  hosts: all
+  become: yes
+  tasks:
+    - name: Load dynamic variables
+      include_tasks: ../dynamic-assignments/env-vars.yml
+      tags:
+        - always
+#- import_playbook: ../static-assignments/uat-webservers.yml
+#- import_playbook: ../static-assignments/loadbalancers.yml
+  #when: load_balancer_is_required
+- import_playbook: ../static-assignments/db-servers.yml
